--- a/ssia-ch6/src/main/resources/application.properties
+++ b/ssia-ch6/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=validate
